--- a/css/detail.css
+++ b/css/detail.css
@@ -35,7 +35,7 @@
     top: 0;
     width: 100%;
     max-width: 320px;
-    padding: var(--spacing-8) 0;
+    padding: var(--spacing-16) 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
